# git-nit

./: .gitignore  README.md  RELEASE.md  SPEC.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
electron/: .gitignore  README.md  SPEC.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.web.json
electron/src/main/: errors.ts  index.ts  ipc.ts  state.ts  sync.ts  watcher.ts
electron/src/preload/: index.d.ts  index.ts
electron/src/renderer/: index.html
electron/src/shared/: types.ts
src-tauri/: tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  watcher.rs
src/lib/: ipc.ts
src/lib/components/: CommitList.svelte  HeadBar.svelte  RepoPicker.svelte
src/main/: ai-bound.ts  ai.ts  auth.ts  errors.ts  gitcheck.ts  github-url.ts  github.ts  index.ts  ipc.ts  logging.ts  recents.ts  state.ts  sync.ts  undo.ts  updater.ts
src/main/engine/: blame.ts  cli-engine.ts  diff.ts  (+4 more)
src/preload/: index.ts
src/shared/: types.ts
tauri/: README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
tauri/src/: App.svelte  app.css
tauri/src-tauri/: Cargo.toml
tauri/src-tauri/src/: commands.rs  dto.rs  error.rs  state.rs
tauri/src-tauri/src/engine/: git2_engine.rs  mod.rs
test/: ai-bound.test.ts  blame.test.ts  diff.test.ts  gitcheck.test.ts  gitflow.test.ts  github-url.test.ts  worktree.test.ts
(+88 files in other folders)
