[package]
name = "git-nit"
version = "0.0.0"
description = "A GitKraken-style Git GUI built on Tauri v2 + Rust"
authors = ["git-nit"]
edition = "2021"
rust-version = "1.96.0"

[lib]
# The Tauri application logic lives in the lib so it can be reused (incl. mobile
# targets later); main.rs is a thin shim that calls `git_nit_lib::run()`.
name = "git_nit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Git engine (M0): git2 only. gix / CLI sidecar arrive in later milestones.
git2 = "0.21.0"

# Async runtime — heavy git2 work runs on spawn_blocking so Tauri commands
# never block the webview.
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync"] }

# Rust -> TypeScript type generation across the IPC boundary.
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

# Cross-platform filesystem watcher for auto-refresh.
notify = "8.2.0"

anyhow = "1.0.102"
thiserror = "2.0.18"

[profile.dev]
# libgit2 (vendored C) is slow to compile; keep our own crates fast to iterate.
incremental = true
